--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
         <hr>
 
         <section id="main_content">
-          <h3>
-<a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>王野平<br>8年工作经验 .Net项目经理</h3>
+          <h1>
+<a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>8年工作经验 .Net项目经理</h1>
 
 <h3><a name="rather-drive-stick" class="anchor" href="#rather-drive-stick"><span class="octicon octicon-link"></span></a>联系方式</h3>
 <p>
