--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
         <section id="main_content">
           <h1>
-<a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>8年工作经验 .Net项目经理</h1>
+<a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a><center>8年工作经验 .Net项目经理</center></h1>
 
 <h3><a name="rather-drive-stick" class="anchor" href="#rather-drive-stick"><span class="octicon octicon-link"></span></a>联系方式</h3>
 <p>
