--- a/index.html
+++ b/index.html
@@ -34,9 +34,7 @@
 
 <h3><a name="rather-drive-stick" class="anchor" href="#rather-drive-stick"><span class="octicon octicon-link"></span></a>联系方式</h3>
 <p>
-<li>手机：18686497171</li>
 <li>Email：dreamor@sina.com</li> 
-<li>QQ：465053</li>
 </p>
 
 <h3>
@@ -45,7 +43,7 @@
 <p>
 <li>王野平/男/1981</li>
 <li>硕士/沈阳工业大学</li> 
-<li>工作年限：8年</li>
+<li>工作年限：11年</li>
 <li>技术博客：http://dreamor.cnblogs.com/</li>
 </p>
 
@@ -55,7 +53,7 @@
 <p>
 <li>2013/07 – 至今 微软中国</li>
 
-职 位：助理服务顾问
+职 位：服务顾问
 
 工作职责和业绩：负责一汽大众驻厂项目。
 
@@ -67,15 +65,15 @@
 
 <li>2008/04 – 2012/04 方舟科技公司</li>
 
-职 位：研发部部长
+职 位：技术负责人
 
 工作职责和业绩：创业型公司联合创始人，技术负责人主导研发部的整体运作，负责公司整体技术框架，新产品研发和现有产品的维护。公司年最高年收入超过1000万。
 
 <li>2005/10 - 2008/03 东软集团</li>
 
-职 位：软件工程师
+职 位：高级软件工程师
 
-工作职责和业绩：从事对日软件的开发与设计，使用过多种开发语言和工具以及数据库，如Java、Delphi、Asp、Eclipse、Oracle、VS.Net等，有大型软件项目开发与测试的经历，并在该项目中担任项目组长，该大型项目开发团队超过70人，项目一期超过200人月。
+工作职责和业绩：从事对日软件的开发与设计，使用过多种开发语言和工具以及数据库，有大型软件项目开发与测试的经历，并在该项目中担任项目组长，该大型项目开发团队超过70人，项目一期超过200人月。
 </p>
 
 <h3>
