--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
         <section id="main_content">
           <h1>
-<a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a><center>8年工作经验 .Net项目经理</center></h1>
+<a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a><center>11年工作经验 高级项目经理/项目总监</center></h1>
 
 <h3><a name="rather-drive-stick" class="anchor" href="#rather-drive-stick"><span class="octicon octicon-link"></span></a>联系方式</h3>
 <p>
@@ -51,7 +51,17 @@
 <a name="authors-and-contributors" class="anchor" href="#authors-and-contributors"><span class="octicon octicon-link"></span></a>工作经历</h3>
 
 <p>
-<li>2013/07 – 至今 微软中国</li>
+<li>2016/12 - 至今 广州奔步电脑有限公司</li>
+职 位：高级项目经理
+
+工作职责和业绩：负责戴姆勒驻厂项目。
+
+<li>2015/4 - 2016/12 软通动力</li>
+职 位：高级项目经理
+
+工作职责和业绩：负责华晨宝马驻厂项目。
+
+<li>2013/07 – 2015/4 微软中国</li>
 
 职 位：服务顾问
 
