--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 
         <header>
           <h1>天堂角落</h1>
-          <h2>Live to change the world.</h2>
-		  <h3 align = "right"><image src="\images\pmp.jpg"></image></h3>
+          <h2>Live to change the world.</h2>		  
+		  <div   id="image1"   style="POSITION:absolute;LEFT:75%;   VISIBILITY:visible;TOP:5%;"><img src="images\pmp.jpg"></img></div>
         </header>
 
         <section id="downloads" class="clearfix">
