--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <header>
           <h1>天堂角落</h1>
           <h2>Live to change the world.</h2>		  
-		  <div   id="image1"   style="POSITION:absolute;LEFT:75%;   VISIBILITY:visible;TOP:5%;"><img src="images\pmp.jpg"></img></div>
+		  <div   id="image1"   style="POSITION:absolute;LEFT:75%;   VISIBILITY:visible;TOP:5%;"><img src="images\PMP.jpg"></img></div>
         </header>
 
         <section id="downloads" class="clearfix">
